fixed css task detail spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -67,7 +67,7 @@ body{
   flex: 30%;
   background-color: tomato;
   width: 100%;
-  height: fit-content;
+  height: fit-content !important;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -162,56 +162,46 @@ body{
 
 .task{
   width:90%;
-  height:50px;
   display: flex;
   color: black;
   margin: 15px;
 
   & .content{
-    flex: 100%;
-    flex-wrap: wrap;
-    display:flex;
     align-items: center;
+    height: fit-content;
+    background-color: grey;
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
 
     & *{
-      width: 100%;
-      height: 65px;
-      display:flex ;
-      font-size: 1.1rem;
-      flex: 1;
+      font-size: 1rem;
       text-align: center;
       justify-content:center;
       align-items: center;
-      background-color: grey;
       padding-bottom: 5px;
+      line-height: 1.1;
+      padding: .1rem;
       
-    }    
-    & :first-child{
+    }
+    & .col{
+      min-width: 3rem;
+    }
+    & .task_title{
       color: white;
       height: 40px;
+      padding-top: 6px;
       font-size: 1.5rem;
       font-weight: bold;
       font-family: Arial, Helvetica, sans-serif;
-      border-top-left-radius: 1rem;
-    }
-    & :nth-child(3){
-      flex: 1;
-      border-bottom-left-radius: 1rem;
-      padding-left: .5rem;
-      
     }
     
   }
-  & .content-overdue{
-    @extend .content;
-    & *{
+  & .content.content-overdue{
       background-color: tomato;
-
-    }
   }
   & button{
     flex: 10%;
-    height: 115px;
+    height: 110px;
     border-bottom-right-radius: 1rem;
     border-top-right-radius: 1rem;
     border-right: 1px solid black;
